--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -15,7 +15,7 @@ RUN set -ex \
   && apk --no-cache add \
     postgresql-dev
 
-RUN docker-php-ext-install pdo pdo_pgsql
+RUN docker-php-ext-install pdo pdo_pgsql pgsql
 
 # RUN apk update
 
