--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3.7'
 
 networks:
   default: 
@@ -31,5 +31,9 @@ services:
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_RUNS_TABLE=${DB_RUNS_TABLE}
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_REGION=${S3_REGION}
+      - S3_KEY=${S3_KEY}
+      - S3_SECRET=${S3_SECRET}
  
   
