--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,23 @@
+# configure your database; we recommend changing at least the user and password, but you don't have to.
+DB_HOST = postgres
+DB_PORT = 5432
+DB_NAME = exbuilder
+DB_USER = exbuilder
+DB_PASSWORD = password
+DB_RUNS_TABLE = exbuilder.runs
+
+# exbuilder's directory structure: what do you want exbuilder's required folders to be called?
 EXPERIMENTS_DIRECTORY=02-experiments
 DATABASE_DIRECTORY=03-database
 ANALYSES_DIRECTORY=04-analyses
 DOCKER_DIRECTORY=docker
 
-DB_PORT=5432
-DB_NAME=exbuilder
-DB_USER=exbuilder
-DB_PASSWORD=password
-DB_RUNS_TABLE=exbuilder.runs
+# s3 bucket for media storage; if pushing audio or video from participants 
+S3_REGION=us-east-1
+S3_ENDPOINT=https://nyc3.digitaloceanspaces.com
+S3_KEY=YOURKEYHERE
+S3_SECRET=YOURSECRETHERE
 
+# passwords for rstudio and jupyter ; you can change if you like or leave them the same
 JUPYTER_TOKEN=password
-RSTUDIO_PASSWORD=password
-
+RSTUDIO_PASSWORD=password 
