--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./${EXPERIMENTS_DIRECTORY}:/var/www/html:delegated
     environment:
-      - DB_HOST=postgres
+      - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
