--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,12 @@
+PROJECT_NAME=yourprojectname
+
 # configure your database; we recommend changing at least the user and password, but you don't have to.
 DB_HOST = postgres
 DB_PORT = 5432
 DB_NAME = exbuilder
 DB_USER = exbuilder
 DB_PASSWORD = password
+DB_SSLMODE = require
 DB_RUNS_TABLE = exbuilder.runs
 
 # exbuilder's directory structure: what do you want exbuilder's required folders to be called?
