--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
+# name of your project; used to name your containers; no spaces
 PROJECT_NAME=your-project-name
+
 
 # configure your database; we recommend changing at least the user and password, but you don't have to.
 DB_HOST = postgres
@@ -9,10 +11,9 @@ DB_PASSWORD = password
 DB_SSLMODE = disable
 
 # exbuilder's directory structure: what do you want exbuilder's required folders to be called?
-EXPERIMENTS_DIRECTORY=02-experiments
-DATABASE_DIRECTORY=03-database
-ANALYSES_DIRECTORY=04-analyses
-DOCKER_DIRECTORY=docker
+EXPERIMENTS_DIRECTORY=Experiments
+DATABASE_DIRECTORY=Database
+ANALYSES_DIRECTORY=Analyses
 
 # s3 bucket for media storage; if pushing audio or video from participants 
 S3_REGION=us-east-1
